---
title: catalogue schema - physical persistence model
---
%% Physical communication view for the module-owned catalogue schema.
%% Executable authority: backend/src/main/resources/db/migration/.
%% Decision context: docs/development/database-migrations.md.
erDiagram
    catalogue_publication ||--o{ game_snapshot : publishes
    game ||--o| game_snapshot : "has current state"
    game ||--o{ game_external_reference : identifies
    game ||--o{ game_release : owns
    catalogue_publication ||--o{ release_snapshot : publishes
    game_snapshot ||--o{ release_snapshot : exposes
    game_snapshot ||--o{ game_alias : "is searchable as"
    game_release ||--o| release_snapshot : "has current state"
    platform ||--o{ release_snapshot : classifies
    region ||--o{ release_snapshot : classifies
    game_release ||--o{ release_external_reference : identifies

    catalogue_publication {
        uuid publication_id PK
        varchar catalogue_version UK "max 100"
        timestamptz published_at
        timestamptz last_synchronized_at
        varchar source_kind "closed values"
        varchar source_name "max 200"
        boolean is_current "visibility; table has at most one row"
    }

    game {
        uuid game_id PK
        timestamptz created_at
    }

    game_snapshot {
        uuid publication_id PK,FK
        uuid game_id PK,FK
        varchar canonical_title "max 300"
        varchar slug UK "unique per publication"
        varchar summary_kind "editorial or sourced"
        varchar summary_text "explicit missing-curation default"
        varchar summary_language "retained content language"
        varchar summary_source_kind "sourced summaries only"
        varchar summary_source_name "sourced summaries only"
        varchar summary_source_entity_type "sourced summaries only"
        varchar cover_reference "max 500"
        varchar cover_source "max 200"
        varchar cover_usage_mode "closed values"
        varchar cover_alternative_text "max 500"
        varchar cover_source_url "nullable published HTTPS source"
        varchar cover_usage_status "must be approved"
        text normalized_title "generated comparable search form"
        tsvector title_search_vector "generated simple search vector"
    }

    game_alias {
        uuid publication_id PK,FK
        uuid game_id PK,FK
        varchar alias PK "max 300"
        text normalized_alias UK "generated; unique per publication"
        tsvector alias_search_vector "generated simple search vector"
        varchar alias_kind "closed values"
        varchar language_tag "nullable BCP 47 tag"
        varchar approval_status "only approved is searchable"
        varchar source_kind "closed values"
        varchar source_name "max 200"
    }

    game_external_reference {
        uuid game_id PK,FK
        varchar provider PK "max 100"
        varchar provider_entity_type PK "closed values"
        varchar provider_id UK "max 200"
        varchar provider_url "nullable HTTPS max 500"
    }

    platform {
        uuid platform_id PK
        varchar code UK "stable code"
        varchar display_name "max 200"
    }

    region {
        uuid region_id PK
        varchar code UK "stable code"
        varchar display_name "max 200"
    }

    game_release {
        uuid release_id PK,UK
        uuid game_id PK,FK
        timestamptz created_at
    }

    release_snapshot {
        uuid publication_id PK,FK
        uuid release_id PK,FK
        uuid game_id FK
        uuid platform_id FK
        uuid region_id FK
        varchar date_precision "day month quarter year unknown"
        date exact_date "day precision only year 1 to 9999"
        smallint release_year "month quarter or year 1 to 9999"
        smallint release_month "1 to 12"
        smallint release_quarter "1 to 4"
        date period_start "generated query boundary"
        date period_end "generated query boundary"
        varchar release_status "closed values"
        varchar source_kind "closed values"
        varchar source_name "max 200"
        varchar source_entity_type "max 100"
        timestamptz provider_updated_at "nullable"
        timestamptz last_synchronized_at
        timestamptz last_verified_at "nullable"
        varchar verification_level "closed values"
        varchar review_status "closed values"
    }

    release_external_reference {
        varchar provider PK
        varchar provider_id PK
        uuid release_id FK,UK
        uuid game_id FK
    }

    synchronization_run {
        uuid run_id PK
        varchar provider "one active run per provider"
        date window_from
        date window_to "inclusive"
        timestamptz started_at
        timestamptz heartbeat_at
        timestamptz completed_at "null while running"
        varchar run_status "closed outcomes"
        varchar outcome_code
        jsonb report "operational counters, not catalogue data"
    }
